# swagger.yaml
@@ -12,115 +12,95 @@ info:
 host: "jass.scheissegal.io"
 basePath: "/v1"
 tags:
-- name: "game"
-  description: "The game instance"
-- name: "round"
-  description: "The round instance"
-- name: "user"
-  description: "Operations about user"
+  - name: "game"
+    description: "The game instance"
+  - name: "round"
+    description: "The round instance"
+  - name: "user"
+    description: "Operations about user"
 schemes:
-- "https"
-- "http"
+  - "https"
+  - "http"
 paths:
   /team:
-    get: 
-      tags: 
-      - "team"
+    get:
+      tags:
+        - "team"
       summary: "get all teams"
       description: ""
       operationId: "getTeam"
-      produces: 
-      - "application/json"
-      responses: 
-        200: 
+      produces:
+        - "application/json"
+      responses:
+        200:
           description: "All teams"
-          schema: 
+          schema:
             type: "array"
-            items: 
+            items:
               $ref: "#/definitions/Team"
-    post: 
-      tags: 
-      - "team"
+    post:
+      tags:
+        - "team"
       summary: "create new team"
       description: ""
       operationId: "createTeam"
-      consumes: 
-      - "application/json"
-      produces: 
-      - "application/json"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Team to create"
-        required: true
-        schema: 
-          $ref: "#/definitions/Team"
-      responses: 
-        201: 
+        - in: "body"
+          name: "body"
+          description: "Team to create"
+          required: true
+          schema:
+            $ref: "#/definitions/Team"
+      responses:
+        201:
           description: "Team created"
-          schema: 
+          schema:
             type: "object"
-            properties: 
-              id: 
+            properties:
+              id:
                 type: "integer"
-    put: 
-      tags: 
-      - "team"
+    put:
+      tags:
+        - "team"
       summary: "update team"
       description: ""
       operationId: "updateTeam"
-      consumes: 
-      - "application/json"
-      produces: 
-      - "application/json"
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Team to update"
-        required: true
-        schema: 
-          $ref: "#/definitions/Team"
-      responses: 
-        200: 
+        - in: "body"
+          name: "body"
+          description: "Team to update"
+          required: true
+          schema:
+            $ref: "#/definitions/Team"
+      responses:
+        200:
           description: "Team updated"
-    delete: 
-      tags: 
-      - "team"
-      summary: "delete team"
-      description: ""
-      operationId: "deleteTeam"
-      consumes: 
-      - "application/json"
-      produces: 
-      - "application/json"
-      parameters:
-      - name: "teamId"
-        in: "path"
-        description: "Team id to delete"
-        required: true
-        type: "integer"
-        format: "int64"
-      responses: 
-        204: 
-          description: "Team deleted"
   /game:
     post:
       tags:
-      - "game"
+        - "game"
       summary: "create new game"
       description: ""
       operationId: "createGame"
       consumes:
-      - "application/json"
+        - "application/json"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Game to create"
-        required: true
-        schema:
-          $ref: "#/definitions/Game"
+        - in: "body"
+          name: "body"
+          description: "Game to create"
+          required: true
+          schema:
+            $ref: "#/definitions/Game"
       responses:
         201:
           description: "Game created"
@@ -131,15 +111,15 @@ paths:
                 type: "integer"
         405:
           description: "Invalid input"
-    get: 
-      tags: 
-      - "game"
+    get:
+      tags:
+        - "game"
       summary: "get all games"
       operationId: "getGame"
-      produces: 
-      - "application/json"
+      produces:
+        - "application/json"
       responses:
-        200: 
+        200:
           description: "all games of the user"
           schema:
             type: "array"
@@ -150,19 +130,19 @@ paths:
   /game/{gameId}:
     get:
       tags:
-      - "game"
+        - "game"
       summary: "Find game by ID"
       description: "Returns a single game"
       operationId: "getgameById"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: "gameId"
-        in: "path"
-        description: "ID of game to return"
-        required: true
-        type: "integer"
-        format: "int64"
+        - name: "gameId"
+          in: "path"
+          description: "ID of game to return"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
         200:
           description: "successful operation"
@@ -174,21 +154,21 @@ paths:
           description: "Game not found"
     delete:
       tags:
-      - "game"
+        - "game"
       summary: "Delete game"
       description: ""
       operationId: "deleteGame"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: "gameId"
-        in: "path"
-        description: "Game id to delete"
-        required: true
-        type: "integer"
-        format: "int64"
+        - name: "gameId"
+          in: "path"
+          description: "Game id to delete"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
-        200: 
+        200:
           description: "deletion was successfull"
         400:
           description: "Invalid ID supplied"
@@ -197,41 +177,41 @@ paths:
   /game/{gameId}/round:
     post:
       tags:
-      - "round"
+        - "round"
       summary: "add round"
       description: "Add a round"
       operationId: "createRound"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: "gameId"
-        in: "path"
-        description: "ID of game"
-        required: true
-        type: "integer"
-        format: "int64"
-      - in: "body"
-        name: "body"
-        description: "new played Round"
-        required: true
-        schema:
-          type: "object"
-          properties:
-            PointsPerTeamPerRound:
-              type: "array"
-              items:
-                type: "object"
-                properties:
-                  teamId: 
-                    type: "integer"
-                    format: "int64"
-                  points: 
-                    type: "integer"
-                  wiisPoints: 
-                    type: "integer"
-            trumpfId: 
-              type: "integer"
-              format: "int64"
+        - name: "gameId"
+          in: "path"
+          description: "ID of game"
+          required: true
+          type: "integer"
+          format: "int64"
+        - in: "body"
+          name: "body"
+          description: "new played Round"
+          required: true
+          schema:
+            type: "object"
+            properties:
+              PointsPerTeamPerRound:
+                type: "array"
+                items:
+                  type: "object"
+                  properties:
+                    teamId:
+                      type: "integer"
+                      format: "int64"
+                    points:
+                      type: "integer"
+                    wiisPoints:
+                      type: "integer"
+              trumpfId:
+                type: "integer"
+                format: "int64"
       responses:
         201:
           description: "Round created"
@@ -244,57 +224,57 @@ paths:
           description: "Something was wrong"
         500:
           description: "Server error"
-  /game/{gameId}/{roundId}: 
+  /game/{gameId}/{roundId}:
     put:
       tags:
-      - "round"
+        - "round"
       summary: "update round"
       description: ""
       operationId: "updateRound"
       produces:
-      - "application/json"
+        - "application/json"
       parameters:
-      - name: "gameId"
-        in: "path"
-        description: "ID of game"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "roundId"
-        in: "path"
-        description: "ID of round"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "body"
-        in: "body"
-        description: "updated Round"
-        required: true
-        schema:
-          $ref: '#/definitions/Round'
+        - name: "gameId"
+          in: "path"
+          description: "ID of game"
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: "roundId"
+          in: "path"
+          description: "ID of round"
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: "body"
+          in: "body"
+          description: "updated Round"
+          required: true
+          schema:
+            $ref: '#/definitions/Round'
       responses:
         200:
           description: "successfully updated round"
         400:
           description: "round update did not work"
-    delete: 
-      tags: 
-      - "round"
+    delete:
+      tags:
+        - "round"
       summary: "delete round"
       operationId: "deleteRound"
       parameters:
-      - name: "gameId"
-        in: "path"
-        description: "ID of game"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "roundId"
-        in: "path"
-        description: "ID of round"
-        required: true
-        type: "integer"
-        format: "int64"
+        - name: "gameId"
+          in: "path"
+          description: "ID of game"
+          required: true
+          type: "integer"
+          format: "int64"
+        - name: "roundId"
+          in: "path"
+          description: "ID of round"
+          required: true
+          type: "integer"
+          format: "int64"
       responses:
         204:
           description: "successfully deleted round"
@@ -317,7 +297,7 @@ definitions:
         format: "int64"
       name:
         type: "string"
-      multiplier: 
+      multiplier:
         type: "integer"
   Round:
     type: "object"
@@ -325,37 +305,37 @@ definitions:
       id:
         type: "integer"
         format: "int64"
-      trumpfId: 
+      trumpfId:
         type: "integer"
         format: "int64"
       pointsPerTeam:
         type: "array"
-        items: 
+        items:
           $ref: "#/definitions/PointsPerTeamPerRound"
-  PointsPerTeamPerRound: 
+  PointsPerTeamPerRound:
     type: "object"
     properties:
-      wiisPoints: 
+      wiisPoints:
         type: "integer"
         format: "int64"
-      points: 
+      points:
         type: "integer"
         format: "int64"
-      teamId: 
+      teamId:
         type: "integer"
         format: "int64"
-      round: 
+      round:
         $ref: "#/definitions/Round"
   Game:
     type: "object"
     required:
-    - "name"
-    - "photoUrls"
+      - "name"
+      - "photoUrls"
     properties:
       id:
         type: "integer"
         format: "int64"
-      isFinished: 
+      isFinished:
         type: "boolean"
         default: false
       teams:
@@ -365,25 +345,20 @@ definitions:
   FullGame:
     type: "object"
     required:
-    - "name"
-    - "photoUrls"
+      - "name"
+      - "photoUrls"
     properties:
       id:
         type: "integer"
         format: "int64"
-      isFinished: 
+      isFinished:
         type: "boolean"
         default: false
       teams:
         type: "array"
         items:
           $ref: "#/definitions/Team"
-      rounds: 
+      rounds:
         type: "array"
-        items: 
+        items:
           $ref: "#/definitions/Round"
-          
-          
-          
-          
-          
